--- a/app/styles/layouts/_home.scss
+++ b/app/styles/layouts/_home.scss
@@ -25,12 +25,20 @@
 //
 // Home
 // -----------------------------------
+.overlay.home{
+	top: 0;
+	left: 0;
+	z-index: 2;
+	position: absolute;
+}
 .home {
+	top: 0;
+	left: 0;
 	z-index: 3;
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
-	position: relative;
+	position: absolute;
 	@include clearfix();
 }
 .content-moscas {
